add account and edit account pages

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
 
 <form class="form-horizontal login-form" name="login-form">
     <div class="form-group">
-        <label for="input-username" class="col-lg-2 control-label">Имя</label>
+        <label for="input-username" class="col-lg-2 control-label">Nickname</label>
 
         <div class="col-lg-10">
             <input name="username" value="name" type="text" class="form-control" id="input-username" placeholder="Имя">
