user can add post

--- a/views/partials/topNavigation.ejs
+++ b/views/partials/topNavigation.ejs
@@ -3,6 +3,7 @@
         <li><a href="/">Главная</a></li>
         <% if (user) { %>
         <li><a href="/chat">Чат</a></li>
+        <li><a href="/blog">Blog</a></li>
         <li><a href='/profile/<%= user._id %>'>Аккаунт</a></li>
         <% } %>
     </ul>
