--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -3,3 +3,4 @@
 
 <p class="lead"><%=user.username%></p>
 <a href="/profile/<%= user._id %>/edit/">Edit Profile</a>
+<a href="/post/new">New post</a>
