add ability to see user's posts

--- a/views/posts/newPost.ejs
+++ b/views/posts/newPost.ejs
@@ -31,7 +31,7 @@
         $('.error', form).html('');
         $(":submit", form).button("loading");
         $.ajax({
-            url: "/post/new",
+            url: "/posts/new",
             method: "POST",
             data: form.serialize(),
             complete: function() {
