--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -7,55 +7,39 @@
 
 <div id="room">
     <ul></ul>
-    <form>
-        <input class="form-control" autocomplete="off" autofocus placeholder="Сообщение...">
+    <form  name="comment-form">
+        <input class="form-control" autocomplete="off" name="title" autofocus placeholder="Комментарий...">
     </form>
 </div>
+<ul>
+    <% comments.forEach(function(comment) { %>
+    <li class="lead"><%= comment.title %></li>
+    <% }) %>
+</ul>
 
 <script>
-    var input = $('#room input');
-    var ul = $('#room ul');
-    var form = $('#room form');
-    var socket = io.connect('', {
-        reconnect: false
-    });
-    socket
-        .on('message', function(username, message) {
-            printMessage(username + "> " + message);
-        })
-        .on('connect', function() {
-            form.on('submit', sendMessage);
-            input.prop('disabled', false);
-        })
-        .on('disconnect', function() {
-            form.off('submit', sendMessage);
-            input.prop('disabled', true);
-            this.$emit('error');
-        })
-        .on('logout', function() {
-            location.href = "/";
-        })
-        .on('error', function(reason) {
-            if (reason == "handshake unauthorized") {
-                printStatus("вы вышли из сайта");
-            } else {
-                setTimeout(function() {
-                    socket.socket.connect();
-                }, 500);
+    $(document.forms['comment-form']).on('submit', function() {
+        var form = $(this);
+        $('.error', form).html('');
+        $(":submit", form).button("loading");
+        $.ajax({
+            url: "/posts/<%= post._id %>/comment",
+            method: "POST",
+            data: form.serialize(),
+            complete: function() {
+                $(":submit", form).button("reset");
+            },
+            statusCode: {
+                200: function() {
+                    form.html("Изменения сохранены").addClass('alert-success');
+                    window.location.href = "/posts/<%= post._id %>";
+                },
+                403: function(jqXHR) {
+                    var error = JSON.parse(jqXHR.responseText);
+                    $('.error', form).html(error.message);
+                }
             }
         });
-    function sendMessage() {
-        var text = input.val();
-        socket.emit('message', text, function() {
-            printMessage("я> " + text);
-        });
-        input.val('');
         return false;
-    }
-    function printStatus(status) {
-        $('<li>').append($('<i>').text(status)).appendTo(ul);
-    }
-    function printMessage(text) {
-        $('<li>').text(text).appendTo(ul);
-    }
+    });
 </script>
