--- a/views/login.ejs
+++ b/views/login.ejs
@@ -41,7 +41,7 @@
             statusCode: {
                 200: function() {
                     form.html("Вы вошли в сайт").addClass('alert-success');
-                    window.location.href = "/chat";
+                    window.location.href = "/posts";
                 },
                 403: function(jqXHR) {
                     var error = JSON.parse(jqXHR.responseText);
