--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -3,17 +3,34 @@
 
 <script src="/vendor/bower_components/socket.io-client/socket.io.js"></script>
 
-<div id="room">
+<div id="room" class="row">
     <form>
-        <% if (current_user) {%>
-        <a href="/posts/new">New post</a>
-        <% } %>
-        <ul>
-            <% posts.forEach(function(post) { %>
-            <li ><a href="/profile/<%= post.author %>"><%= post.author.username %></a></li>
-            <li class="lead"><a href="/posts/<%= post._id %>"><%= post.title %></a></li>
-            <% }) %>
-        </ul>
+        <div class="container-fluid">
+            <div class="col-sm-12">
+                <h1>Blog
+                    <% if (current_user) {%>
+                    <span><a href="/posts/new" class="btn btn-default" role="button"><span class="glyphicon glyphicon-plus "></span></a></span>
+                    <% } %>
+                </h1>
+            <table class="table blog-post">
+                <tbody>
+                    <% posts.forEach(function(post) { %>
+                        <tr>
+                            <td>
+                                <ul class="list-inline">
+                                    <li><a href="/profile/<%= post.author %>" class="btn btn-primary btn-xs"><%= post.author.username %></a></li>
+                                    <li><span class="label label-info"><%= post.created.toDateString()%>, <%= post.created.getHours()%>:<%= post.created.getMinutes()%></span></li>
+                                </ul>
+                                <p class="lead"><a href="/posts/<%= post._id %>"><%= post.title %></a></p>
+                                <p><%= post.body %></p>
+                            </td>
+                        </tr>
+                    <% }) %>
+                </tbody>
+
+            </table>
+            </div>
+        </div>
     </form>
 </div>
 
