--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -2,6 +2,8 @@
 <% block('title', post.title) -%>
 
 <script src="/vendor/bower_components/socket.io-client/socket.io.js"></script>
+<link href="/vendor/bower_components/bootstrap-star-rating/css/star-rating.css" media="all" rel="stylesheet" type="text/css" />
+<script src="/vendor/bower_components/bootstrap-star-rating/js/star-rating.js" type="text/javascript"></script>
 
 <div id="room" class="row" >
     <form name="comment-form">
@@ -10,6 +12,7 @@
                 <ul class="list-inline">
                     <li><a href="/profile/<%= post.author %>" class="btn btn-primary btn-xs"><%= post.author.username %></a></li>
                     <li><span class="label label-info"><%= post.created.toDateString()%>, <%= post.created.getHours()%>:<%= post.created.getMinutes()%></span></li>
+                    <li><input id="input-id" name="input-name" type="number" value="<%= rating.value %>" class="rating" min=1 max=5 step=1 data-size="xs"></li>
                 </ul>
                 <h2><%= post.title%></h2>
                 <p class="lead"><%=post.body%></p>
@@ -44,6 +47,21 @@
 
 
 <script>
+    $('#input-id').on('rating.change', function(event, value, caption) {
+        $.ajax({
+            url: "/posts/<%= post._id %>/rating",
+            method: "POST",
+            data: {rating: value},
+            statusCode: {
+                200: function() {
+                    form.html("Изменения сохранены").addClass('alert-success');
+                    window.location.href = "/posts/<%= post._id %>";
+                }
+            }
+        });
+
+        return false;
+    });
     $(document.forms['comment-form']).on('submit', function() {
         var form = $(this);
         $('.error', form).html('');
