--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -62,6 +62,21 @@
 
         return false;
     });
+    $('#input-id').on('rating.clear', function(event, value, caption) {
+        $.ajax({
+            url: "/posts/<%= post._id %>/rating/destroy",
+            method: "POST",
+            data: {rating: value},
+            statusCode: {
+                200: function() {
+                    form.html("Изменения сохранены").addClass('alert-success');
+                    window.location.href = "/posts/<%= post._id %>";
+                }
+            }
+        });
+
+        return false;
+    });
     $(document.forms['comment-form']).on('submit', function() {
         var form = $(this);
         $('.error', form).html('');
