add average rating

--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -12,6 +12,7 @@
                 <ul class="list-inline">
                     <li><a href="/profile/<%= post.author %>" class="btn btn-primary btn-xs"><%= post.author.username %></a></li>
                     <li><span class="label label-info"><%= post.created.toDateString()%>, <%= post.created.getHours()%>:<%= post.created.getMinutes()%></span></li>
+                    <li><span class="label label-info">Average rating: <%= average_rating %> (voted: <%= voted %>)</span></li>
                     <li><input id="input-id" name="input-name" type="number" value="<%= rating.value %>" class="rating" min=1 max=5 step=1 data-size="xs"></li>
                 </ul>
                 <h2><%= post.title%></h2>
