--- a/views/posts/newPost.ejs
+++ b/views/posts/newPost.ejs
@@ -14,7 +14,7 @@
         <label for="input-body" class="col-lg-2 control-label">Body</label>
 
         <div class="col-lg-10">
-            <input name="body" type="text" class="form-control" id="input-body" placeholder="Body">
+            <textarea class="form-control" rows="10" name="body" type="text" id="input-body" placeholder="Body"></textarea>
         </div>
     </div>
     <div class="form-group">
