--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -8,26 +8,7 @@
 </div>
 
 <form class="form-horizontal post-form" name="post-edit-form">
-    <div class="form-group">
-        <label for="input-title" class="col-lg-2 control-label">Title</label>
-
-        <div class="col-lg-10">
-            <input name="title" value=<%=post.title%> type="text" class="form-control" id="input-title" placeholder="title">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="input-body" class="col-lg-2 control-label">Body</label>
-
-        <div class="col-lg-10">
-            <input name="body" value=<%=post.body%> type="text" class="form-control" id="input-body" placeholder="body">
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-lg-offset-2 col-lg-10">
-            <button type="submit" class="btn btn-primary" data-loading-text="Ok">Ok</button>
-            <span class="help-block error"></span>
-        </div>
-    </div>
+    <%-partial('../partials/posts/postForm')%>
 </form>
 
 <script>
