--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -23,7 +23,7 @@
                     </div>
                 </div>
                 <div id="posts-list">
-                    <%-partial('../partials/postsList')%>
+                    <%-partial('../partials/posts/postsList')%>
                 </div>
             </div>
         </div>
