--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -4,6 +4,7 @@
 <script src="/vendor/bower_components/socket.io-client/socket.io.js"></script>
 <link href="/vendor/bower_components/bootstrap-star-rating/css/star-rating.css" media="all" rel="stylesheet" type="text/css" />
 <script src="/vendor/bower_components/bootstrap-star-rating/js/star-rating.js" type="text/javascript"></script>
+<script src="/socket.io/socket.io.js"></script>
 
 <div id="room" class="row" >
     <div class="container-fluid">
@@ -58,4 +59,5 @@
 
         return false;
     });
+
 </script>
